--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,14 +1,12 @@
 @import 'variables';
 
-h1 {
-    color: $red-color;
-    font-size: 100px;
+
+#navbar-brand {
+    color: aliceblue;
 }
 
-h2 {
-    color: rgb(52, 190, 155);
-    font-size: 150px;
+.header {
+    color: aliceblue;
 }
-
 
 
