--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="app">
-        {{> header }}
+        <div class="header">
+            {{> header }}
+        </div>
 
         <div class="container">
             <h1>{{{body}}}</h1>
